update index url

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
             </div>
             
             <div class="tile tile-lime col-md-3 col-xs-12"  >
-                <a href="http://www.rakuhi.com/cedv" >
+                <a href="http://www.rakuhi.com/HEICT" >
                     <h1>HEICT</h1>
                     <i class="fa fa-3x fa-medkit "></i>
                     <p>健康期望寿命指标测算工具</p>
