update whattocook sql

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             
             
             <div class="tile tile-blue col-md-3 col-xs-12"  >
-                <a href="http://www.rakuhi.com/whattocook/" >
+                <a href="http://www.rakuhi.com/WhatToCook/" >
                     <h1>做啥吃</h1>
                     <i class="fa fa-3x fa-coffee"></i>
                     <p>为选择恐惧症厨艺爱好者解决心头大患</p>
