change blog url

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 <a href="http://blog.rakuhi.com/">
                   <h1>Blog</h1>
                   <i class="fa fa-3x fa-book"></i>
-                  <p>blog.rakuhi.com</p>
+                  <p>www.jianshu.com/users/1498fdad05eb/latest_articles</p>
                 </a>
             </div>
             
