update whattocook sql

--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
          <div class="col-md-12">
             <h3 id="part2">了解我</h3>
             <div class="tile tile-teal col-md-2 col-xs-12"  >
-                <a href="http://blog.rakuhi.com/">
+                <a href="http://www.jianshu.com/users/1498fdad05eb/latest_articles">
                   <h1>Blog</h1>
                   <i class="fa fa-3x fa-book"></i>
-                  <p>www.jianshu.com/users/1498fdad05eb/latest_articles</p>
+                  <p>www.jianshu.com</p>
                 </a>
             </div>
             
